# compressed_map

./: .gitmodules  Cargo.toml  LICENSE.txt  Makefile  OtherIdeas.md  README.md  TODO.md  build.rs
attic_c/: Makefile
attic_c/mkfigure/: for_slides.sage  for_slides.sage.py  genplots.py  txt2py_sketch.pl
attic_c/src/: lfr_builder.c  lfr_file.c  lfr_nonuniform.c  lfr_uniform.h  tile_matrix.h
attic_c/test/: compress_crl.c  test_lfr_nonuniform.cxx  test_lfr_uniform.cxx  test_tilematrix.c  wwdrca.crl
benches/: matrix_ops.rs  nonuniform.rs  uniform.rs
examples/: ffi.c
mkfigure/: gensketchplots.py  txt2py.pl
src/: bitset.h  cffi.rs  dedup.c  dedup.h  frayed_ribbon.c  lfr_builder.c  lfr_builder.h  lfr_file.c  lfr_file.h  lfr_nonuniform.c  lfr_nonuniform.h  lfr_uniform.c  lfr_uniform.h  lib.rs  nonuniform.rs  size.rs  tile_matrix.c  tile_matrix.h  tile_ops.h  uniform.rs  util.h
src/tilematrix/: bitset.rs  matrix.rs  mod.rs  tile.rs
test/: test_lfr_nonuniform.c  test_lfr_nonuniform.cxx  test_lfr_uniform.c  test_lfr_uniform.cxx  test_tilematrix.c
