[package]
name = "compressed_map"
version = "0.1.0"
edition = "2021"

[features]
threading = []

[dependencies]
# TODO: pin hashes
siphasher = "0.3"
bincode = "2.0.0-RC.1"
rand = "0.8.5"

[target.'cfg(bench)'.dev-dependencies]
criterion = "0.3"

[[bench]]
name = "matrix_ops"
harness = false

[[bench]]
name = "uniform"
harness = false

[[bench]]
name = "nonuniform"
harness = false

[profile.release]
lto = true
#panic = "abort"
