[package]
name = "compressed_map"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "'Static functions': compressed maps with the keys removed"
readme = "README.md"
repository = "https://github.com/bitwiseshiftleft/compressed_map"
categories = ["data-structures", "compression"]
include = ["/src", "/benches", "LICENSE.txt", "TODO.md", "README.md", "build.rs"]
build = "build.rs" # for cbindgen

[lib]
crate-type = ["cdylib","lib"]
bench = false

[badges]
maintenance = { status = "experimental" }

[features]
default = ["cffi"]
threading = []
cffi      = []
headers   = []

[dependencies]
# TODO: pin hashes
siphasher = "0.3.10"
bincode = "2.0.0-RC.1"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "matrix_ops"
harness = false

[[bench]]
name = "uniform"
harness = false

[[bench]]
name = "nonuniform"
harness = false

[build-dependencies]
cbindgen = "0.21.0"

#[profile.bench]

#[profile.release]
#lto = true
#panic = "abort"
